--- a/public/CSS/mobile.css
+++ b/public/CSS/mobile.css
@@ -612,12 +612,12 @@ cursor: pointer;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
 padding: 0;
   margin: 0;
   border: none;
   background: #fff;
-  margin: 16px 0px;
+  margin: 0% 0% 10% 0% ;
   flex-basis: 100%;
 }
 
